# app_in_daw

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build_and_test.yml
Assets/: process_categories.json
Assets/Languages/: de.lang  en.lang  es.lang  fr.lang  it.lang  pt.lang
CMake/: GitHubEnv.cmake  cpm.cmake  packaging.cmake  pluginval.cmake
Code/Include/: AppLayout.h  AppLocalisation.h  AppSettings.h  Parameters.h  PluginEditor.h  PluginProcessor.h  ProcessCategory.h  ProcessFilter.h  StandaloneWindowStyling.h
Code/Include/Capture/: SelectedProcessCapture.h
Code/Include/Component/: CaptureStatus.h  LanguageSettings.h  OutputSettings.h  PerformanceMonitor.h  ProcessTable.h  SettingsWindow.h  VisualSettings.h
Code/Source/: AppLayout.cpp  AppLocalisation.cpp  AppSettings.cpp  Parameters.cpp  PluginEditor.cpp  PluginProcessor.cpp  ProcessCategory.cpp  ProcessFilter.cpp  StandaloneApp.cpp  StandaloneWindowStyling.cpp  StandaloneWindowStyling.mm
Code/Source/Capture/: SelectedProcessCapture.cpp
Code/Source/Component/: CaptureStatus.cpp  LanguageSettings.cpp  OutputSettings.cpp  PerformanceMonitor.cpp  ProcessTable.cpp  SettingsWindow.cpp  VisualSettings.cpp
Packaging/: icon.icns
Packaging/macos/: distribution.xml.template
Packaging/macos/resources/: README
Packaging/windows/: installer.iss
Packaging/windows/resources/: EULA
Scripts/: package_macos.sh
Tests/: AppSettingsTests.cpp  CMakeLists.txt  ParametersTests.cpp  PluginProcessorLatencyTests.cpp  PluginProcessorProcessCaptureTests.cpp  PluginStatePersistenceTests.cpp  ProcessCategoryMatcherTests.cpp  ProcessFilterTests.cpp  ProcessListIntegrationTests.cpp  SelectedProcessCaptureTests.cpp  main.cpp
